--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -23,6 +23,7 @@ RUN apt-get update && \
     apt-get install -y \
     --no-install-recommends \
     python$PYTHON_VERSION python3-pip python3-setuptools \
+    git \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/*
 # Make some useful symlinks that are expected to exist
