Add notebook playground

--- a/deployment/Dockerfile
+++ b/deployment/Dockerfile
@@ -86,6 +86,8 @@ RUN apt-get update && \
 COPY requirements/dev_requirements.txt requirements/
 RUN pip install -r requirements/dev_requirements.txt
 
+RUN chown -R app:app /code
+RUN chown -R app:app /var/log
 USER app
 COPY . /code
 CMD [ "python", "src/main.py" ]
