--- a/etc/.env
+++ b/etc/.env
@@ -4,3 +4,15 @@
 BROKER_SERVICE_URL=pulsar://192.168.64.28:31941/
 PULSAR_TEXT_EMBEDDING_TOPIC=apache/pulsar/text-embedding-topic
 SUBSCRIPTION_NAME=text-mapper
+
+
+## DB 
+DB_DRIVER=postgresql
+DB_USER=sunnyday1
+DB_PASSWORD=sunnyday2
+DB_HOST=postgresql.db
+DB_PORT=5432
+DB_DATABASENAME=aab-goosht
+
+## overwrite the DB settings: 
+SQLALCHEMY_DATABASE_URI=postgresql://sunnyday1:sunnyday2@192.168.64.30:5432/aab-goosht
