clustering reads and writes to DB instead of local files

--- a/etc/.env
+++ b/etc/.env
@@ -15,4 +15,6 @@ DB_PORT=5432
 DB_DATABASENAME=aab-goosht
 
 ## overwrite the DB settings: 
-SQLALCHEMY_DATABASE_URI=postgresql://sunnyday1:sunnyday2@192.168.64.30:5432/aab-goosht
+# minikube service postgresql -n db --url
+SQLALCHEMY_DATABASE_URI=postgresql://sunnyday1:sunnyday2@192.168.64.32:31492/aabgoosht
+
