Create Job model

--- a/etc/.env
+++ b/etc/.env
@@ -15,6 +15,6 @@ DB_PORT=5432
 DB_DATABASENAME=aab-goosht
 
 ## overwrite the DB settings: 
-# minikube service postgresql -n db --url
-SQLALCHEMY_DATABASE_URI=postgresql://sunnyday1:sunnyday2@192.168.64.32:31492/aabgoosht
+# minikube service postgresql-proxy -n db --url
+SQLALCHEMY_DATABASE_URI=postgresql://sunnyday1:sunnyday2@192.168.64.32:30561/aabgoosht
 
