--- a/deployment/helm-chart/values.yaml
+++ b/deployment/helm-chart/values.yaml
@@ -14,6 +14,8 @@ subscriptionName: mapping-svc
 podContainerName: mapping
 imagePullPolicy: Always
 
+webServerPort: "5001"
+
 deployment:
     is_dev: false
 
