--- a/etc/.env
+++ b/etc/.env
@@ -1,7 +1,8 @@
 #####################
 # Messaging Service #
 #####################
-BROKER_SERVICE_URL=pulsar://192.168.64.28:31941/
+BROKER_SERVICE_URL=pulsar://192.168.64.33:30950/
+PULSAR_TEXT_TOPIC=apache/pulsar/text-topic
 PULSAR_TEXT_EMBEDDING_TOPIC=apache/pulsar/text-embedding-topic
 SUBSCRIPTION_NAME=text-mapper
 
@@ -16,5 +17,5 @@ DB_DATABASENAME=aab-goosht
 
 ## overwrite the DB settings: 
 # minikube service postgresql-proxy -n db --url
-SQLALCHEMY_DATABASE_URI=postgresql://sunnyday1:sunnyday2@192.168.64.32:31707/aabgoosht
+SQLALCHEMY_DATABASE_URI=postgresql://sunnyday1:sunnyday2@192.168.64.33:30040/aabgoosht
 
