--- a/etc/.env
+++ b/etc/.env
@@ -1,7 +1,7 @@
 #####################
 # Messaging Service #
 #####################
-BROKER_SERVICE_URL=pulsar://ae1c16a50d9684e3fa0ba1edc1ecc4dd-662192280.us-east-2.elb.amazonaws.com:30795/
+BROKER_SERVICE_URL=pulsar://192.168.64.39:30026/
 PULSAR_TEXT_TOPIC=apache/pulsar/text-topic
 PULSAR_TEXT_EMBEDDING_TOPIC=apache/pulsar/text-embedding-topic
 SUBSCRIPTION_NAME=text-mapper
