Add status to the response of job

--- a/etc/.env
+++ b/etc/.env
@@ -1,7 +1,7 @@
 #####################
 # Messaging Service #
 #####################
-BROKER_SERVICE_URL=pulsar://192.168.64.39:30026/
+BROKER_SERVICE_URL=pulsar://192.168.64.45:30840/
 PULSAR_TEXT_TOPIC=apache/pulsar/text-topic
 PULSAR_TEXT_EMBEDDING_TOPIC=apache/pulsar/text-embedding-topic
 SUBSCRIPTION_NAME=text-mapper
@@ -16,6 +16,7 @@ DB_PORT=5432
 DB_DATABASENAME=aab-goosht
 
 ## overwrite the DB settings: 
+# SQLALCHEMY_DATABASE_URI=sqlite:///app.db
 # minikube service postgresql-proxy -n db --url
-SQLALCHEMY_DATABASE_URI=postgresql://sunnyday1:sunnyday2@192.168.64.33:30040/aabgoosht
+SQLALCHEMY_DATABASE_URI=postgresql://sunnyday1:sunnyday2@192.168.64.44:31135/aabgoosht
 
