Pull secret file one layer higher

--- a/etc/.env
+++ b/etc/.env
@@ -1,7 +1,7 @@
 #####################
 # Messaging Service #
 #####################
-BROKER_SERVICE_URL=pulsar://192.168.64.45:30840/
+BROKER_SERVICE_URL=pulsar://acd692cf6b70d476b8cde66b8f474152-1151751867.us-east-2.elb.amazonaws.com:31999/
 PULSAR_TEXT_TOPIC=apache/pulsar/text-topic
 PULSAR_TEXT_EMBEDDING_TOPIC=apache/pulsar/text-embedding-topic
 SUBSCRIPTION_NAME=text-mapper
