--- a/deployment/mapping/templates/application.yaml
+++ b/deployment/mapping/templates/application.yaml
@@ -26,7 +26,7 @@ spec:
                 -   name: DB_USER
                     value: "{{ .Values.db.user }}"
                 -   name: DB_PASSWORD
-                    value: "{{ .Values.db.password }}"
+                    value: "{{ .Values.secrets.db.password }}"
                 -   name: DB_HOST
                     value: "{{ .Values.db.host }}"
                 -   name: DB_PORT
@@ -72,7 +72,7 @@ spec:
                 -   name: DB_USER
                     value: "{{ .Values.db.user }}"
                 -   name: DB_PASSWORD
-                    value: "{{ .Values.db.password }}"
+                    value: "{{ .Values.secrets.db.password }}"
                 -   name: DB_HOST
                     value: "{{ .Values.db.host }}"
                 -   name: DB_PORT
@@ -98,7 +98,7 @@ spec:
                 -   name: DB_USER
                     value: "{{ .Values.db.user }}"
                 -   name: DB_PASSWORD
-                    value: "{{ .Values.db.password }}"
+                    value: "{{ .Values.secrets.db.password }}"
                 -   name: DB_HOST
                     value: "{{ .Values.db.host }}"
                 -   name: DB_PORT
