--- a/deployment/mapping/values.yaml
+++ b/deployment/mapping/values.yaml
@@ -7,6 +7,7 @@ brokerServiceUrl: pulsar://pulsar-broker.pulsar.svc.cluster.local:6650/
 #
 pulsarTextTopic: apache/pulsar/text-topic
 pulsarTextEmbeddingTopic: apache/pulsar/text-embedding-topic
+pulsarTaskTopic: apache/pulsar/task-topic
 subscriptionName: mapping-svc
 
 # Docker
