--- a/etc/.env.template
+++ b/etc/.env.template
@@ -1,7 +1,7 @@
 #####################
 # Messaging Service #
 #####################
-BROKER_SERVICE_URL=pulsar://192.168.64.49:/
+BROKER_SERVICE_URL=pulsar://192.168.64.48:/
 PULSAR_TEXT_TOPIC=apache/pulsar/text-topic
 PULSAR_TEXT_EMBEDDING_TOPIC=apache/pulsar/text-embedding-topic
 SUBSCRIPTION_NAME=text-mapper
@@ -10,7 +10,7 @@ SUBSCRIPTION_NAME=text-mapper
 ## DB 
 DB_DRIVER=postgresql
 DB_USER=sunnyday1
-DB_PASSWORD=sunnyday2
+DB_PASSWORD=******
 DB_HOST=postgresql.db
 DB_PORT=5432
 DB_DATABASENAME=aabgoosht
@@ -20,5 +20,3 @@ DB_DATABASENAME=aabgoosht
 SQLALCHEMY_DATABASE_URI=postgresql://sunnyday1:sunnyday2@192.168.64.47:30766/aabgoosht
 # SQLALCHEMY_DATABASE_URI=sqlite:///app.db
 
-## Google API
-GOOGLE_API_KEY=AIzaSyDj8HCWacStYARsxSrytUGqClVd7etlzwM
