--- a/etc/.env
+++ b/etc/.env
@@ -1,9 +1,10 @@
 #####################
 # Messaging Service #
 #####################
-BROKER_SERVICE_URL=pulsar://192.168.64.49:30546/
+BROKER_SERVICE_URL=pulsar://192.168.64.51:32086/
 PULSAR_TEXT_TOPIC=apache/pulsar/text-topic
 PULSAR_TEXT_EMBEDDING_TOPIC=apache/pulsar/text-embedding-topic
+PULSAR_TASK_TOPIC=apache/pulsar/task-topic
 SUBSCRIPTION_NAME=text-mapper
 
 
@@ -17,7 +18,7 @@ DB_DATABASENAME=aabgoosht
 
 ## overwrite the DB settings: 
 # minikube service postgresql-proxy -n db --url
-SQLALCHEMY_DATABASE_URI=postgresql://sunnyday1:sunnyday2@192.168.64.47:30766/aabgoosht
+SQLALCHEMY_DATABASE_URI=postgresql://sunnyday1:sunnyday2@192.168.64.51:31038/aabgoosht
 # SQLALCHEMY_DATABASE_URI=sqlite:///app.db
 
 ## Google API
