--- a/deployment/mapping/templates/application.yaml
+++ b/deployment/mapping/templates/application.yaml
@@ -1,3 +1,18 @@
+apiVersion: v1
+kind: ConfigMap
+metadata:
+    name: db-config
+    namespace: default
+data:
+    DB_DRIVER: "{{ .Values.db.driver }}"
+    DB_USER: "{{ .Values.db.user }}"
+    DB_PASSWORD: "{{ .Values.secrets.db.password }}"
+    DB_HOST: "{{ .Values.db.host }}"
+    DB_PORT: "{{ .Values.db.port }}"
+    DB_DATABASENAME: "{{ .Values.db.databasename }}"
+
+---
+
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -20,19 +35,22 @@ spec:
                 imagePullPolicy: {{ .Values.imagePullPolicy }}
                 command: ["gunicorn"]
                 args: ["route:app", "-c", "configs/gunicorn_configs.py"]
-                env:
-                -   name: DB_DRIVER
-                    value: "{{ .Values.db.driver }}"
-                -   name: DB_USER
-                    value: "{{ .Values.db.user }}"
-                -   name: DB_PASSWORD
-                    value: "{{ .Values.secrets.db.password }}"
-                -   name: DB_HOST
-                    value: "{{ .Values.db.host }}"
-                -   name: DB_PORT
-                    value: "{{ .Values.db.port }}"
-                -   name: DB_DATABASENAME
-                    value: "{{ .Values.db.databasename }}"
+                envFrom:
+                    - configMapRef:
+                        name: db-config
+                # env:
+                # -   name: DB_DRIVER
+                #     value: "{{ .Values.db.driver }}"
+                # -   name: DB_USER
+                #     value: "{{ .Values.db.user }}"
+                # -   name: DB_PASSWORD
+                #     value: "{{ .Values.secrets.db.password }}"
+                # -   name: DB_HOST
+                #     value: "{{ .Values.db.host }}"
+                # -   name: DB_PORT
+                #     value: "{{ .Values.db.port }}"
+                # -   name: DB_DATABASENAME
+                #     value: "{{ .Values.db.databasename }}"
 
 ---
 
