--- a/deployment/mapping/templates/application.yaml
+++ b/deployment/mapping/templates/application.yaml
@@ -2,7 +2,6 @@ apiVersion: v1
 kind: ConfigMap
 metadata:
     name: db-config
-    namespace: default
 data:
     DB_DRIVER: "{{ .Values.db.driver }}"
     DB_USER: "{{ .Values.db.user }}"
@@ -148,7 +147,7 @@ spec:
                 -   name: DB_DATABASENAME
                     value: "{{ .Values.db.databasename }}"
                 -   name: GOOGLE_API_KEY
-                    value: "{{ .Values.google.api_key }}"
+                    value: "{{ .Values.secrets.google.api_key }}"
 
 ---
 
