--- a/etc/.env
+++ b/etc/.env
@@ -1,7 +1,7 @@
 #####################
 # Messaging Service #
 #####################
-BROKER_SERVICE_URL=pulsar://192.168.99.100:31959/
+BROKER_SERVICE_URL=pulsar://afbb49413b8f345f3950dd43da239ebd-482506370.us-east-2.elb.amazonaws.com:31378/
 PULSAR_TEXT_TOPIC=apache/pulsar/text-topic
 PULSAR_TEXT_EMBEDDING_TOPIC=apache/pulsar/text-embedding-topic
 PULSAR_TASK_TOPIC=apache/pulsar/task-topic
