Add limit for number of comments to download; Enhance the video_id extraction from url

--- a/etc/.env
+++ b/etc/.env
@@ -1,7 +1,7 @@
 #####################
 # Messaging Service #
 #####################
-BROKER_SERVICE_URL=pulsar://ad418c062e7644bf78d646b255837825-1298128160.us-east-2.elb.amazonaws.com:31315/
+BROKER_SERVICE_URL=pulsar://192.168.59.105:32143/
 PULSAR_TEXT_TOPIC=apache/pulsar/text-topic
 PULSAR_TEXT_EMBEDDING_TOPIC=apache/pulsar/text-embedding-topic
 PULSAR_TASK_TOPIC=apache/pulsar/task-topic
@@ -18,8 +18,12 @@ DB_DATABASENAME=aabgoosht
 
 ## overwrite the DB settings: 
 # minikube service postgresql-proxy -n db --url
-SQLALCHEMY_DATABASE_URI=postgresql://sunnyday1:sunnyday2@192.168.64.54:30676/aabgoosht
+SQLALCHEMY_DATABASE_URI=postgresql://sunnyday1:sunnyday2@192.168.59.105:30365/aabgoosht
 # SQLALCHEMY_DATABASE_URI=sqlite:///app.db
+
+# minikube service cache-redis-master --url
+CACHE_URI=192.168.59.105:30311
 
 ## Google API
 GOOGLE_API_KEY=AIzaSyDj8HCWacStYARsxSrytUGqClVd7etlzwM
+
