--- a/deployment/mapping/templates/application.yaml
+++ b/deployment/mapping/templates/application.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: ConfigMap
 metadata:
-    name: db-config
+    name: storage-config
 data:
     DB_DRIVER: "{{ .Values.db.driver }}"
     DB_USER: "{{ .Values.db.user }}"
@@ -9,6 +9,8 @@ data:
     DB_HOST: "{{ .Values.db.host }}"
     DB_PORT: "{{ .Values.db.port }}"
     DB_DATABASENAME: "{{ .Values.db.databasename }}"
+    CACHE_HOST: "{{ .Values.cache.host }}"
+    CACHE_PORT: "{{ .Values.cache.port }}"
 
 ---
 
@@ -38,7 +40,7 @@ spec:
                 args: ["route:app", "-c", "configs/gunicorn_configs.py"]
                 envFrom:
                     - configMapRef:
-                        name: db-config
+                        name: storage-config
                 env:
                 -   name: BROKER_SERVICE_URL
                     value: {{ .Values.brokerServiceUrl }}
@@ -82,7 +84,7 @@ spec:
                 #     value: {{ .Values.pulsarTextEmbeddingTopic }}
                 envFrom:
                     - configMapRef:
-                        name: db-config
+                        name: storage-config
             -   name: {{ .Values.podContainerName }}-consumer-text-embedding
                 image: {{ .Values.dockerImage }}
                 imagePullPolicy: {{ .Values.imagePullPolicy }}
@@ -99,7 +101,7 @@ spec:
                     value: {{ .Values.pulsarTextEmbeddingTopic }}
                 envFrom:
                     - configMapRef:
-                        name: db-config
+                        name: storage-config
             -   name: {{ .Values.podContainerName }}-consumer-task
                 image: {{ .Values.dockerImage }}
                 imagePullPolicy: {{ .Values.imagePullPolicy }}
@@ -118,7 +120,7 @@ spec:
                     value: "{{ .Values.secrets.google.api_key }}"
                 envFrom:
                     - configMapRef:
-                        name: db-config
+                        name: storage-config
 
 ---
 
