--- a/etc/.env
+++ b/etc/.env
@@ -1,7 +1,7 @@
 #####################
 # Messaging Service #
 #####################
-BROKER_SERVICE_URL=pulsar://a6161c1817a34405380f2bffdc8d93cd-1273765226.us-west-2.elb.amazonaws.com:30062/
+BROKER_SERVICE_URL=pulsar://192.168.59.129:32258/
 PULSAR_TEXT_TOPIC=apache/pulsar/text-topic
 PULSAR_TEXT_EMBEDDING_TOPIC=apache/pulsar/text-embedding-topic
 PULSAR_TASK_TOPIC=apache/pulsar/task-topic
