Update the chapar version

--- a/etc/.env
+++ b/etc/.env
@@ -1,7 +1,7 @@
 #####################
 # Messaging Service #
 #####################
-BROKER_SERVICE_URL=pulsar://a49337891fe5b4252ababd41c95da295-2030762113.us-west-2.elb.amazonaws.com:32526/
+BROKER_SERVICE_URL=pulsar://192.168.59.133:30692/
 PULSAR_TEXT_TOPIC=apache/pulsar/text-topic
 PULSAR_TEXT_EMBEDDING_TOPIC=apache/pulsar/text-embedding-topic
 PULSAR_TASK_TOPIC=apache/pulsar/task-topic
