--- a/etc/test.env
+++ b/etc/test.env
@@ -1,12 +1,37 @@
 #####################
 # Messaging Service #
 #####################
-BROKER_SERVICE_URL=pulsar://192.168.64.34:31763/
+BROKER_SERVICE_URL=pulsar://192.168.59.136:32116/
 PULSAR_TEXT_TOPIC=apache/pulsar/text-topic
 PULSAR_TEXT_EMBEDDING_TOPIC=apache/pulsar/text-embedding-topic
+PULSAR_TASK_TOPIC=apache/pulsar/task-topic
 SUBSCRIPTION_NAME=text-mapper
 
 
 ## DB 
-SQLALCHEMY_DATABASE_URI=sqlite:///test-app.db
+DB_DRIVER=postgresql
+DB_USER=sunnyday1
+DB_PASSWORD=*******
+DB_HOST=postgresql.db
+DB_PORT=5432
+DB_DATABASENAME=aabgoosht
 
+
+## overwrite the DB settings: 
+# minikube service postgresql-proxy -n db --url
+SQLALCHEMY_DATABASE_URI=postgresql://sunnyday1:********@192.168.59.123:30332/aabgoosht
+# SQLALCHEMY_DATABASE_URI=sqlite:///app.db
+
+# minikube service cache-redis-master --url
+CACHE_URI=192.168.59.123:32388
+
+## Google API
+GOOGLE_API_KEY=**************
+
+## AWS
+AWS_ACCESS_KEY_ID=AKIAVQCOA2CZ2ZAWLWQH
+AWS_SECRET_ACCESS_KEY=*******************
+AWS_REGION=us-west-2
+
+## Logging to the Cloud
+LOG_GROUP_NAME=ApplicationLogs
