Rename test file

--- a/etc/test.env
+++ b/etc/test.env
@@ -36,4 +36,7 @@ AWS_REGION=us-west-2
 ## Logging to the Cloud
 LOG_GROUP_NAME=ApplicationLogs
 
-K8S_READINESS_PROBE_FILE=_test.txt 
+##############
+# Kubernetes #
+##############
+K8S_READINESS_PROBE_FILE=/tmp/healthy
